Closed
Bug 1374643
Opened 6 years ago
Closed 6 years ago
Crash in mozilla::a11y::HandlerProvider::MarshalAs
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | fixed |
People
(Reporter: MarcoZ, Assigned: bugzilla)
References
(Blocks 1 open bug)
Details
(Keywords: crash, Whiteboard: aes+)
Crash Data
Attachments
(1 file)
1.24 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-c9d5d223-cec4-43da-847a-8a4360170620. ============================================================= I just got this crash when switching tabs to the (already loaded) Gmail tab. First time in a week that I am getting a crash at all while running with E10S and the Handler on.
Reporter | ||
Comment 1•6 years ago
|
||
Another crash when again switching to the Gmail tab: bp-f7189361-2aea-4c01-8d81-209890170620
![]() |
||
Comment 2•6 years ago
|
||
handler related, I think we just turned this back on today. Low volume so far but that will probably change. The crashes are off the main thread in RPC land. We should triage this at the next meeting.
Whiteboard: aes? → aes+
Assignee | ||
Comment 3•6 years ago
|
||
The REFIID had gone bad, hence the crashes. Replacing with IID so that HandlerProvider stores its own copy.
![]() |
||
Updated•6 years ago
|
Attachment #8879660 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 4•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/8f2434d1648b623c06326f582fd431cbe533c6a8 Bug 1374643: Use IID instead of REFIID for a11y::HandlerProvider::mTargetUnkIid; r=jimm
Comment 5•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/8f2434d1648b
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment 6•6 years ago
|
||
:aklotz, is this patch could fix crash [1] ? or should I open a new bug ? [1] https://crash-stats.mozilla.com/report/index/41566ce3-f741-417b-84c9-d42450170621
Flags: needinfo?(aklotz)
Assignee | ||
Comment 7•6 years ago
|
||
That's the same as this bug.
Crash Signature: [@ mozilla::a11y::HandlerProvider::MarshalAs] → [@ mozilla::a11y::HandlerProvider::MarshalAs]
[@ memcmp | IsEqualGUID ]
Flags: needinfo?(aklotz)
Updated•6 years ago
|
status-firefox54:
--- → unaffected
status-firefox55:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•