Bug 1374643: Use IID instead of REFIID for a11y::HandlerProvider::mTargetUnkIid; r=jimm

MozReview-Commit-ID: IMFMxhHsbp6